fixed inbody overflow

--- a/media/static/style.css
+++ b/media/static/style.css
@@ -73,7 +73,7 @@ footer {
   padding: 15px 0 0 0;
   vertical-align: middle;
   margin-top: -60px;
-  position: sticky; }
+  position: fixed; }
 
 .menu {
   height: inherit;
@@ -101,8 +101,7 @@ footer {
 
 #container {
   height: 100%;
-  margin-bottom: 50px;
-  overflow: scroll; }
+  margin-bottom: 50px; }
 
 .row {
   width: 100%;
